[package]
name = "card-deck"
version = "0.2.2"
authors = ["Mihir Gadgil <mmgadgil20@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# https://github.com/serde-rs/serde/issues/2538
# https://github.com/serde-rs/serde/releases/tag/v1.0.184
serde = { version = "1.0.184", features = [
    "derive",
], optional = true }

[features]
standard-deck = []
serde = ["dep:serde"]
